# relayr-buddy

./: .env  .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.lovable/: plan.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260423110000_relayr_mvp_schema.py
backend/app/: config.py  database.py  main.py
backend/app/auth/: middleware.py  router.py
backend/app/draft/: router.py
backend/app/email/: gmail_client.py  router.py
backend/app/employee/: __init__.py  router.py
backend/app/models/: __init__.py  base.py  draft.py  google_token.py  mvp.py  persona.py  policy.py  routing.py
backend/app/persona/: llm_client.py  router.py
backend/app/policy/: router.py
backend/app/routing/: router.py
backend/app/services/: __init__.py  context_engine.py  draft_service.py  gmail_service.py  persona_service.py  security.py  workspace.py
backend/tests/: conftest.py  test_api.py
src/: App.tsx  index.css  vite-env.d.ts
src/components/: AppLayout.tsx  IntelligencePanel.tsx  OnboardingLayout.tsx  RulebookUpload.tsx
src/context/: AppContext.tsx
src/data/: mockDb.ts
src/hooks/: useAuth.tsx
src/lib/: apiClient.ts  calendarApi.ts  draftApi.ts  draftGenerator.ts  employeeProfileApi.ts  gmailApi.ts  googleAuth.ts  googleConfig.ts  intelligenceEngine.ts  personaApi.ts  personaExtractor.ts  rulebookParser.ts
src/pages/: ConnectEmail.tsx  Dashboard.tsx  Inbox.tsx  Login.tsx  Settings.tsx  SettingsCalendar.tsx  (+7 more)
supabase/: config.toml
(+7 files in other folders)
